// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedFilters tests overrides 1`] = `
<div class="sk-selected-filters">
  <div class="sk-selected-filters-option">
    <div class="sk-selected-filters-option__override-name">test value</div>
    <div class="sk-selected-filters-option__remove-action">x</div>
  </div>
  <div class="sk-selected-filters-option">
    <div class="sk-selected-filters-option__override-name">test value 2 translated</div>
    <div class="sk-selected-filters-option__remove-action">x</div>
  </div>
</div>
`;

exports[`SelectedFilters tests renders correctly 1`] = `
<div class="sk-selected-filters">
  <div class="sk-selected-filters-option sk-selected-filters__item selected-filter--test">
    <div class="sk-selected-filters-option__name">test name: test value</div>
    <div class="sk-selected-filters-option__remove-action">x</div>
  </div>
  <div class="sk-selected-filters-option sk-selected-filters__item selected-filter--test2">
    <div class="sk-selected-filters-option__name">test name 2 translated: test value 2 translated</div>
    <div class="sk-selected-filters-option__remove-action">x</div>
  </div>
</div>
`;
